tests/out/error/loop/label_not_exists.in.bt
for true {
	break my_label
	break
}
